Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UCameraComponent.h

	DOTNET_EXPORT auto E_PROP_UCameraComponent_AspectRatio_GET(UCameraComponent* Ptr) { return Ptr->AspectRatio; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_AspectRatio_SET(UCameraComponent* Ptr, float Value) { Ptr->AspectRatio = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_bConstrainAspectRatio_GET(UCameraComponent* Ptr) { return Ptr->bConstrainAspectRatio; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_bConstrainAspectRatio_SET(UCameraComponent* Ptr, uint8 Value) { Ptr->bConstrainAspectRatio = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_bLockToHmd_GET(UCameraComponent* Ptr) { return Ptr->bLockToHmd; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_bLockToHmd_SET(UCameraComponent* Ptr, uint8 Value) { Ptr->bLockToHmd = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_bUseFieldOfViewForLOD_GET(UCameraComponent* Ptr) { return Ptr->bUseFieldOfViewForLOD; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_bUseFieldOfViewForLOD_SET(UCameraComponent* Ptr, uint8 Value) { Ptr->bUseFieldOfViewForLOD = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_bUsePawnControlRotation_GET(UCameraComponent* Ptr) { return Ptr->bUsePawnControlRotation; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_bUsePawnControlRotation_SET(UCameraComponent* Ptr, uint8 Value) { Ptr->bUsePawnControlRotation = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_FieldOfView_GET(UCameraComponent* Ptr) { return Ptr->FieldOfView; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_FieldOfView_SET(UCameraComponent* Ptr, float Value) { Ptr->FieldOfView = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_OrthoFarClipPlane_GET(UCameraComponent* Ptr) { return Ptr->OrthoFarClipPlane; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_OrthoFarClipPlane_SET(UCameraComponent* Ptr, float Value) { Ptr->OrthoFarClipPlane = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_OrthoNearClipPlane_GET(UCameraComponent* Ptr) { return Ptr->OrthoNearClipPlane; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_OrthoNearClipPlane_SET(UCameraComponent* Ptr, float Value) { Ptr->OrthoNearClipPlane = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_OrthoWidth_GET(UCameraComponent* Ptr) { return Ptr->OrthoWidth; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_OrthoWidth_SET(UCameraComponent* Ptr, float Value) { Ptr->OrthoWidth = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_PostProcessBlendWeight_GET(UCameraComponent* Ptr) { return Ptr->PostProcessBlendWeight; }
	DOTNET_EXPORT void E_PROP_UCameraComponent_PostProcessBlendWeight_SET(UCameraComponent* Ptr, float Value) { Ptr->PostProcessBlendWeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCameraComponent_PostProcessSettings_GET(UCameraComponent* Ptr) { return (INT_PTR)&(Ptr->PostProcessSettings); }
	DOTNET_EXPORT void E_PROP_UCameraComponent_PostProcessSettings_SET(UCameraComponent* Ptr, INT_PTR Value) { Ptr->PostProcessSettings = *(FPostProcessSettings*)Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UCameraComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UCameraComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_UCameraComponent_AddAdditiveOffset(UCameraComponent* Self, INT_PTR Transform, float FOV)
	{
		auto& _p0 = *(FTransform*)Transform;
		auto _p1 = FOV;
		Self->AddAdditiveOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCameraComponent_AddExtraPostProcessBlend(UCameraComponent* Self, INT_PTR PPSettings, float PPBlendWeight)
	{
		auto& _p0 = *(FPostProcessSettings*)PPSettings;
		auto _p1 = PPBlendWeight;
		Self->AddExtraPostProcessBlend(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCameraComponent_ClearAdditiveOffset(UCameraComponent* Self)
	{
		Self->ClearAdditiveOffset();
	}
	DOTNET_EXPORT auto E_UCameraComponent_ClearExtraPostProcessBlends(UCameraComponent* Self)
	{
		Self->ClearExtraPostProcessBlends();
	}
	DOTNET_EXPORT auto E_UCameraComponent_GetAdditiveOffset(UCameraComponent* Self, INT_PTR OutAdditiveOffset, float OutAdditiveFOVOffset)
	{
		auto& _p0 = *(FTransform*)OutAdditiveOffset;
		auto& _p1 = OutAdditiveFOVOffset;
		Self->GetAdditiveOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCameraComponent_GetCameraView(UCameraComponent* Self, float DeltaTime, INT_PTR DesiredView)
	{
		auto _p0 = DeltaTime;
		auto& _p1 = *(FMinimalViewInfo*)DesiredView;
		Self->GetCameraView(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCameraComponent_NotifyCameraCut(UCameraComponent* Self)
	{
		Self->NotifyCameraCut();
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetAspectRatio(UCameraComponent* Self, float InAspectRatio)
	{
		auto _p0 = InAspectRatio;
		Self->SetAspectRatio(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetConstraintAspectRatio(UCameraComponent* Self, bool bInConstrainAspectRatio)
	{
		auto _p0 = bInConstrainAspectRatio;
		Self->SetConstraintAspectRatio(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetFieldOfView(UCameraComponent* Self, float InFieldOfView)
	{
		auto _p0 = InFieldOfView;
		Self->SetFieldOfView(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetOrthoFarClipPlane(UCameraComponent* Self, float InOrthoFarClipPlane)
	{
		auto _p0 = InOrthoFarClipPlane;
		Self->SetOrthoFarClipPlane(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetOrthoNearClipPlane(UCameraComponent* Self, float InOrthoNearClipPlane)
	{
		auto _p0 = InOrthoNearClipPlane;
		Self->SetOrthoNearClipPlane(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetOrthoWidth(UCameraComponent* Self, float InOrthoWidth)
	{
		auto _p0 = InOrthoWidth;
		Self->SetOrthoWidth(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetPostProcessBlendWeight(UCameraComponent* Self, float InPostProcessBlendWeight)
	{
		auto _p0 = InPostProcessBlendWeight;
		Self->SetPostProcessBlendWeight(_p0);
	}
	DOTNET_EXPORT auto E_UCameraComponent_SetUseFieldOfViewForLOD(UCameraComponent* Self, bool bInUseFieldOfViewForLOD)
	{
		auto _p0 = bInUseFieldOfViewForLOD;
		Self->SetUseFieldOfViewForLOD(_p0);
	}